Responsibilities (#10)
* docs():

* feat(Daemonize): https://gradle.com/s/yuaw2loo5dfhs

* feat(Daemonize): https://gradle.com/s/slaakiu2dnbec

* feat(responses): https://scans.gradle.com/s/27nhnhpi7tszk