@@ -6,7 +6,7 @@ plugins {
     id 'war'
 }
 group 'ru.vachok.pbem.chess'
-version '0.18'
+version('0.19')
 mainClassName = group + '.StartMePChess'
 sourceCompatibility = 1.10
 sourceSets {
@@ -20,8 +20,7 @@ sourceSets {
     test {
         resources {
             srcDirs = ["src/test/java", "src/test/resources"]
-            includes = ["**/*.fxml", "**/*.css", "**/*.properties", "**/*.png", "**/*.jar",
-                        "regpass"]
+            includes = ["**/*.fxml", "**/*.css", "**/*.properties", "**/*.png", "**/*.jar"]
         }
     }
 }
@@ -31,6 +30,9 @@ repositories {
 }
 dependencies {
     compile fileTree('lib\\')
+    providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
+    // https://mvnrepository.com/artifact/org.mockito/mockito-all
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
     // https://mvnrepository.com/artifact/commons-io/commons-io
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
     // https://mvnrepository.com/artifact/org.testng/testng
@@ -57,13 +59,17 @@ jar {
 }
 test {
     useTestNG()
+    minHeapSize = '256m'
+    maxHeapSize = '2048m'
+    jvmArgs '-XX:MaxPermSize=512m'
     testLogging.showStandardStreams = true
     beforeTest { descriptor ->
         logger.lifecycle("Running test: " + descriptor)
     }
     failFast = false
+
     onOutput { descriptor, event ->
-        logger.lifecycle("OOPS : " + descriptor + " produced standard out/err: " + event.message)
+        logger.lifecycle(descriptor + " out/err: " + event.message)
     }
     javadoc{
   /*-encoding "UTF-8" -linkofline -html5 -javafx -nohelp -version -doctitle "Øàõìàòû ïî-email. Old School, but COOL!", -bottom "<a href="https://github.com/Vachok/pbem_chess" target=_blank>GitHub</a>"*/
